--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -4,8 +4,29 @@
 
 	<!-- Error messages -->
     <string id="35000">Error: Can not access database.</string>
-	<string id="35001">Error while updating config.xml</string>
-	<string id="35002">Error reading config.xml.</string>	
+	<string id="35001">Error while updating config.xml.</string>
+	<string id="35002">Error reading config.xml.</string>
+	<string id="35003">Error: File config.xml does not exist.</string>
+	<string id="35004">Error: Could not read config.xml.</string>
+	<string id="35005">Configuration error. See xbmc.log for details.</string>
+	<string id="35006">Rom Collection ids are not unique.</string>
+	<string id="35007">Error: Cannot backup config.xml.</string>
+	<string id="35008">Error: Cannot write config.xml.</string>
+	<string id="35009">could not be found in config.xml.</string>
+	<string id="35010">Error: Could not create artwork directory.</string>
+	<string id="35011">Check xbmc.log for details.</string>
+	<string id="35012">Error: Could not create artwork file.</string>
+	<string id="35013">Rescrape game error</string>
+	<string id="35014">Can't load selected Game</string>
+	<string id="35015">Edit Game Command Error</string>
+	<string id="35016">Add To Favorites Error</string>
+	<string id="35017">Delete Game Error</string>
+	<string id="35018">Can't delete selected Game</string>
+	<string id="35019">Error</string>
+	<string id="35020">Error Deleting Rom Collection</string>
+	<string id="35021">Configuration Error</string>	
+	
+	
 	
 	<!-- Hints / questions -->
 	<string id="40000">No config file found.</string>
@@ -30,6 +51,32 @@
 	<string id="40019">loading list...</string>
 	<string id="40020">All</string>
 	<string id="40021">loading games...</string>
+	<string id="40022">Importing Rom Collection</string>
+	<string id="40023">Importing Game</string>
+	<string id="40024">Continue</string>
+	<string id="40025">Continue and Ignore Errors</string>
+	<string id="40026">Cancel</string>
+	<string id="40027">First 10 games could not be imported.</string>
+	<string id="40028">Import canceled.</string>
+	<string id="40029">Please check xbmc.log for errors.</string>
+	<string id="40030">Building file list...</string>
+	<string id="40031">downloading info</string>
+	<string id="40032">Enter</string>
+	<string id="40033">Remove Game From Favorites</string>
+	<string id="40034">Remove Selection From Favorites</string>
+	<string id="40035">Enter Game Command</string>
+	<string id="40036">Are you sure you want to delete this game?</string>
+	<string id="40037">Delete games and configuration</string>
+	<string id="40038">Delete games only</string>
+	<string id="40039">Emulator</string>
+	<string id="40040">Enter Rom File Mask</string>
+	<string id="40041">Path</string>
+	<string id="40042">Choose a media path to add</string>
+	<string id="40043">Choose a media path to remove</string>	
+	
+	
+	
+	
 	
 	
 	
