--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -12,7 +12,7 @@
 	<string id="35006">Rom Collection ids are not unique.</string>
 	<string id="35007">Error: Cannot backup config.xml.</string>
 	<string id="35008">Error: Cannot write config.xml.</string>
-	<string id="35009">could not be found in config.xml.</string>
+	<string id="35009">%s %s could not be found in config.xml.</string>
 	<string id="35010">Error: Could not create artwork directory.</string>
 	<string id="35011">Check xbmc.log for details.</string>
 	<string id="35012">Error: Could not create artwork file.</string>
@@ -25,18 +25,18 @@
 	<string id="35019">Error</string>
 	<string id="35020">Error Deleting Rom Collection</string>
 	<string id="35021">Configuration Error</string>
-	<string id="35022">Site does not exist in config.xml</string>
-	<string id="35023">Cannot get rom collection with id</string>
+	<string id="35022">Site %s does not exist in config.xml</string>
+	<string id="35023">Cannot get rom collection with id: %s</string>
 	<string id="35024">Selected game could not be read from database.</string>
 	<string id="35025">Control with id: %s could not be found. Check WindowXML file.</string>
-	<string id="35026">Site %s does not exist in config.xml</string>
-	<string id="35027">Trying to scrape %s games with %s scraper.</string>
-	<string id="35028">(Options 'All' and 'Overwrite scraper settings</string>
+	<!--<string id="35026">Site %s does not exist in config.xml</string>-->
+	<string id="35027">Cannot scrape %s games with %s scraper.</string>
+	<string id="35028">(Options 'All' and 'Overwrite scraper settings'</string>
 	<string id="35029">can't be used together with offline scrapers.)</string>
 	<string id="35030">Error: Cannot backup MyGames.db: Backup File exists.</string>
 	<string id="35031">Error: Cannot backup MyGames.db</string>
 	<string id="35032">Error: No Update from version %s to %s.</string>
-	<string id="35033">Control with id: %s could not be found. Check WindowXML file.</string>
+	<!--<string id="35033">Control with id: %s could not be found. Check WindowXML file.</string>-->
 	<string id="35034">Error launching game!</string>
 	<string id="35035">Error while launching emulator</string>
 	<string id="35036">Error deleting files after launching emulator</string>
@@ -81,7 +81,7 @@
 	<string id="40029">Please check xbmc.log for details.</string>
 	<string id="40030">Building file list...</string>
 	<string id="40031">downloading info</string>
-	<string id="40032">Enter</string>
+	<string id="40032">Enter %s</string>
 	<string id="40033">Remove Game From Favorites</string>
 	<string id="40034">Remove Selection From Favorites</string>
 	<string id="40035">Enter Game Command</string>
@@ -97,8 +97,8 @@
 	<string id="40045">Edit or delete an existing scraper</string>
 	<string id="40046">Select scraper name</string>
 	<string id="40047">Choose a scraper to remove</string>
-	<string id="40048">Scraper is already in use</string>
-	<string id="40049">Please choose another one.</string>
+	<string id="40048">Scraper %s is already in use and cannot be deleted.</string>
+	<!--<string id="40049">Please choose another one.</string>-->
 	<string id="40050">Automatic: Accurate</string>
 	<string id="40051">Automatic: Guess Matches</string>
 	<string id="40052">Interactive: Select Matches</string>
