--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -5,10 +5,143 @@
 
     <!-- Error messages -->
 	<string id="35000">Fehler: Datenbank kann nicht geöffnet werden.</string>
+	<string id="35001">Fehler beim Update von config.xml.</string>
+	<string id="35002">Fehler beim Lesen von config.xml.</string>
+	<string id="35003">Fehler: Datei config.xml existiert nicht.</string>
+	<string id="35004">Fehler: Datei config.xml konnte nicht gelesen werden.</string>
+	<string id="35005">Konfigurationsfehler. Siehe xbmc.log für Details.</string>
+	<string id="35006">Rom Collection ids sind nicht eindeutig.</string>
+	<string id="35007">Fehler: Konnte config.xml nicht sichern.</string>
+	<string id="35008">Fehler: Konnte config.xml nicht schreiben.</string>
+	<string id="35009">%s %s konnte in config.xml nicht gefunden werden.</string>
+	<string id="35010">Fehler: Artwork Verzeichnis konnte nicht erstellt werden.</string>
+	<string id="35011">Siehe xbmc.log für Details.</string>
+	<string id="35012">Fehler: Konnte Artwork Datei nicht erstellen.</string>
+	<string id="35013">Fehler beim Rescrape des Spiels</string>
+	<string id="35014">Das ausgewählte Spiel kann nicht geladen werden</string>
+	<string id="35015">Fehler beim Spiel-Kommando bearbeiten</string>
+	<string id="35016">Fehler beim Hinzufügen zu den Favoriten</string>
+	<string id="35017">Fehler beim Löschen des Spiels</string>
+	<string id="35018">Das ausgewählte Spiel kann nicht gelöscht werden</string>
+	<string id="35019">Fehler</string>
+	<string id="35020">Fehler beim Löschen der Rom Collection</string>
+	<string id="35021">Konfigurationsfehler</string>
+	<string id="35022">Site-Eintrag %s existiert nicht in config.xml</string>
+	<string id="35023">Rom Collection mit Id %s kann nicht gelesen werden</string>
+	<string id="35024">Das ausgewählte Spiel kann nicht gelesen werden.</string>
+	<string id="35025">Control mit id: %s konnte nicht gefunden werden. WindowXML Datei überprüfen.</string>
+	<!--<string id="35026">Site-Eintrag %s existiert nicht in config.xml</string>-->
+	<string id="35027">%s Spiele können nicht mit %s Scraper verarbeitet werden.</string>
+	<string id="35028">(Optionen 'Alle' und 'Scraper Einstellungen überschreiben'</string>
+	<string id="35029">können nicht mit Offline Scrapern verwendet werden.)</string>
+	<string id="35030">Fehler: MyGames.db kann nicht gesichert werden: Backup existiert bereits.</string>
+	<string id="35031">Fehler: MyGames.db kann nicht gesichert werden</string>
+	<string id="35032">Fehler: Update von Version %s auf %s nicht möglich.</string>
+	<!--<string id="35033">Control with id: %s could not be found. Check WindowXML file.</string>-->
+	<string id="35034">Fehler beim Starten des Spiels</string>
+	<string id="35035">Fehler beim Starten des Emulators</string>
+	<string id="35036">Fehler beim Löschen der temporären Dateien</string>
+	<string id="35037">Fehler beim Starten des Emulators: Datei %s existiert nicht</string>
+	<string id="35038">Fehler beim Erzeugen der .cut Datei. Siehe xbmc.log für Details.</string>
+	<string id="35039">Fehler beim Laden der .7z Datei.</string>
+	<string id="35040">Fehler: Datei config_template.xml existiert nicht</string>
+
 	
 	<!-- Hints / questions -->
 	<string id="40000">Konfigurationsdatei config.xml ist nicht vorhanden.</string>
 	<string id="40001">Jetzt neu erstellen?</string>
+	<string id="40002">Datenbank und config.xml wurden aktualisiert.</string>
+	<string id="40003">Weitere Infos zu den Änderungen stehen im Wiki und im Changelog.</string>
+	<string id="40004">Lösche Spiel</string>
+	<string id="40005">Lösche Spiele...</string>
+	<string id="40006">Spiele löschen abgeschlossen</string>
+	<string id="40007">Überprüfe Datei</string>
+	<string id="40008">Datenbank aufräumen...</string>
+	<string id="40009">Datenbank komprimieren...</string>
+	<string id="40010">Aufräumen der Datenbank abgeschlossen</string>
+	<string id="40011">Importiere Spiele...</string>
+	<string id="40012">Import wird ausgeführt</string>
+	<string id="40013">Import abbrechen?</string>
+	<string id="40014">Import wird abgebrochen</string>
+	<string id="40015">Abbruch des Imports ist noch nicht abgeschlossen.</string>
+	<string id="40016">Suchbegriff eingeben</string>
+	<string id="40017">Suche</string>
+	<string id="40018">Spiele jetzt importieren?</string>
+	<string id="40019">Liste wird geladen...</string>
+	<string id="40020">Alle</string>
+	<string id="40021">Lade Spiele...</string>
+	<string id="40022">Importiere Rom Collection</string>
+	<string id="40023">Importiere Spiel</string>
+	<string id="40024">Fortfahren</string>
+	<string id="40025">Fortfahren und Fehler ignorieren</string>
+	<string id="40026">Abbrechen</string>
+	<string id="40027">Die ersten 10 Spiele konnten nicht importiert werden.</string>
+	<string id="40028">Import abgebrochen.</string>
+	<string id="40029">Siehe xbmc.log für Details.</string>
+	<string id="40030">Dateiliste wird erstellt...</string>
+	<string id="40031">Info runterladen</string>
+	<string id="40032">%s eingeben</string>
+	<string id="40033">Spiel aus Favoriten entfernen</string>
+	<string id="40034">Auswahl aus Favoriten entfernen</string>
+	<string id="40035">Spiel-Kommando eingeben</string>
+	<string id="40036">Dieses Spiel wirklich löschen?</string>
+	<string id="40037">Spiele und Konfiguration löschen</string>
+	<string id="40038">Nur Spiele löschen</string>
+	<string id="40039">Emulator</string>
+	<string id="40040">Rom Datei Maske eingeben</string>
+	<string id="40041">Pfad</string>
+	<string id="40042">Media-Pfad hinzufügen</string>
+	<string id="40043">Media-Pfad entfernen</string>
+	<string id="40044">Es sind bereits für alle Rom Collections Scraper vorhanden</string>	
+	<string id="40045">Scraper entfernen oder bearbeiten</string>
+	<string id="40046">Scraper Name auswählen</string>
+	<string id="40047">Zu löschenden Scraper auswählen</string>
+	<string id="40048">Scraper % wird bereits verwendet und kann nicht gelöscht werden.</string>
+	<!--<string id="40049">Bitte wähle einen anderen Scraper.</string>-->
+	<string id="40050">Automatisch: Exakt</string>
+	<string id="40051">Automatisch: Treffer raten</string>
+	<string id="40052">Automatisch: Treffer bestimmen</string>
+	<string id="40053">local artwork</string>
+	<string id="40054">local nfo</string>
+	<string id="40055">Artwork auswählen</string>
+	<string id="40056">Eigenschaft auswählen</string>
+	<string id="40057">ignorieren</string>
+	<string id="40058">Filter ignorieren</string>
+	<string id="40059">anzeigen</string>
+	<string id="40060">Nur Spiele mit fehlenden Einträgen anzeigen</string>
+	<string id="40061">ausblenden</string>
+	<string id="40062">Spiele mit fehlenden Einträgen ausblenden</string>
+	<string id="40063">Spiel starten</string>
+	<string id="40064">Disk auswählen</string>
+	<string id="40065">Spiel von Beginn starten</string>
+	<string id="40066">Gespeicherten Spielstand starten?</string>
+	<string id="40067">Speicher-Slot auswählen</string>
+	<string id="40068">Befehlstext eingeben</string>
+	<string id="40069">Datenbank exportieren...</string>
+	<string id="40070">Exportiere Rom Collection</string>
+	<string id="40071">Exportiere Spiel</string>
+	<string id="40072">Aktion abgebrochen. Config.xml wird nicht geschrieben.</string>
+	<string id="40073">Wähle ein Szenario</string>
+	<string id="40074">Spiel-Infos und Artwork online scrapen</string>
+	<string id="40075">Spiel-Infos und Artwork sind lokal verfügbar</string>
+	<string id="40076">Plattform auswählen</string>
+	<string id="40077">Namen der Plattform eingeben</string>
+	<string id="40078">Pfad zum %s Emulator</string>
+	<string id="40079">Emulator Parameter ("%ROM%" für die Rom-Dateien)</string>
+	<string id="40080">Pfad zu den %s Roms</string>
+	<string id="40081">Dateimaske (Komma-separiert): z.B. *.zip, *.smc</string>
+	<string id="40082">%s Artwork</string>
+	<string id="40083">Wähle Artwork Typ aus</string>
+	<string id="40084">Einen weiteren Artwork-Pfad anlegen?</string>
+	<string id="40085">Aufbau der Spiel-Infos</string>
+	<string id="40086">Eine Info-Datei pro Spiel</string>
+	<string id="40087">Eine Info-Datei für alle Spiele</string>
+	<string id="40088">Spiele online scrapen (oder local nfo verwenden)</string>
+	<string id="40089">%s Info</string>
+	<string id="40090">Info-Datei Maske eingeben</string>
+	<string id="40091">%s Parse-Anweisung</string>
+	<string id="40092">Eine weitere Rom Collection anlegen?</string>
+
 	
 	<!-- GUI controls -->
 	<!-- main window-->
