--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -142,6 +142,7 @@
 	<string id="40090">Enter description file mask</string>
 	<string id="40091">%s parse instruction</string>
 	<string id="40092">Do you want to add another Rom Collection?</string>
+	<string id="40093">%s Artwork</string>
 	
 	
 	<!-- Settings -->
