--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -141,6 +141,7 @@
 	<string id="40090">Info-Datei Maske eingeben</string>
 	<string id="40091">%s Parse-Anweisung</string>
 	<string id="40092">Eine weitere Rom Collection anlegen?</string>
+	<string id="40093">%s Artwork</string>
 
 	
 	<!-- Settings -->
