- update gui to new database layout (wip)

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -147,7 +147,7 @@
 	<string id="40095">Post-Launch delay (ms)</string>
 	<string id="40096">Solo mode startup delay (ms)</string>
 	<string id="40097">Use VB script in solo mode (Windows only)</string>
-	<string id="40098">Downloading info...</string>
+	<string id="40098">Downloading artwork...</string>
 	
 	
 	<!-- Settings -->
