--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2.0.8 (09/2013)
+~~~~~~~~~~~~~
+Import Games:
+  * update moby scraper: reflect changes on page
+
 2.0.7 (06/2013)
 ~~~~~~~~~~~~~
 Import Games:
