--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2.0.9 (09/2013)
+~~~~~~~~~~~~~
+Import Games:
+  * fix thegamesdb scraper: requests have been blocked by cloudflare
+
 2.0.8 (09/2013)
 ~~~~~~~~~~~~~
 Import Games:
