--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -147,6 +147,7 @@
 	<string id="40095">Post-Launch delay (ms)</string>
 	<string id="40096">Solo mode startup delay (ms)</string>
 	<string id="40097">Use VB script in solo mode (Windows only)</string>
+	<string id="40098">Use builtin emulator (RetroPlayer)?</string>
 	
 	
 	<!-- Settings -->
